K8s-security/pod_secret.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod
  name: pod
spec:
  containers:
  - image: nginx
    name: pod
    resources: {}
    volumeMounts:
        - name: secret1
          readOnly: true
          mountPath: "/etc/secret1"

  volumes:
    - name: secret1
      secret:
        secretName: secret1
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
