K8s-security/privileged_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-1
  namespace: default
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 1d']
    securityContext:
      #privileged: true
      allowPrivilegeEscalation: false
